syntax = "proto3";
package uagd.growth.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "uagd/growth/v1/growth.proto";

option go_package = "uagd/x/growth/types";

// Msg service for growth module.
service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc SetRegionMetric(MsgSetRegionMetric) returns (MsgSetRegionMetricResponse);
}

// MsgSetRegionMetric allows the oracle authority to set regional metrics for a period.
message MsgSetRegionMetric {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "uagd/x/growth/MsgSetRegionMetric";

  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string region_id = 2;
  string period = 3;
  string tax_index = 4 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string gdp_index = 5 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  string exports_index = 6 [(cosmos_proto.scalar) = "cosmos.Dec", (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}

message MsgSetRegionMetricResponse {
  GrowthScore score = 1 [(gogoproto.nullable) = false];
}
